force-app/main/default/objects/TipoEvaluacionOpcion__c/TipoEvaluacionOpcion__c.object-meta.xml
<CustomObject>
    <label>Tipo de Evaluacion Opcion</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tipo de Evaluacion Opciones</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>