force-app/main/default/objects/TipoEvaluacionOpcion__c/fields/Descripcion__c.field-meta.xml
<CustomField>
    <fullName>Descripcion__c</fullName>
    <label>Descripcion</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>