force-app/main/default/objects/TipoEvaluacionOpcion__c/fields/TipoEvaluacion__c.field-meta.xml
<CustomField>
    <fullName>TipoEvaluacion__c</fullName>
    <label>Tipo de Evaluacion</label>
    <referenceTo>TipoEvaluacion__c</referenceTo>
    <relationshipLabel>Tipo de Evaluacion Opciones</relationshipLabel>
    <relationshipName>TipoEvaluacionOpciones</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>